# fast_cpp_server

./: ArgumentParser_8cpp.html  ArgumentParser_8cpp__incl.map  ArgumentParser_8h.html  ArgumentParser_8h__dep__incl.map  ArgumentParser_8h__dep__incl.md5  ArgumentParser_8h__incl.map  ArgumentParser_8h_source.html  CMakeLists.txt  CPUInfoTools_8cpp.html  CPUInfoTools_8cpp__incl.map  CPUInfoTools_8cpp__incl.md5  CPUInfoTools_8h.html  CPUInfoTools_8h__dep__incl.map  CPUInfoTools_8h__dep__incl.md5  CPUInfoTools_8h_source.html  DeviceOnlineMonitor_8cpp.html  DeviceOnlineMonitor_8cpp__incl.map  DeviceOnlineMonitor_8cpp__incl.md5  DeviceOnlineMonitor_8h.html  DeviceOnlineMonitor_8h__dep__incl.map  DeviceOnlineMonitor_8h__dep__incl.md5  DeviceOnlineMonitor_8h__incl.map  DeviceOnlineMonitor_8h__incl.md5  DeviceOnlineMonitor_8h_source.html  DiskInfoTools_8cpp.html  DiskInfoTools_8cpp__incl.map  DiskInfoTools_8cpp__incl.md5  DiskInfoTools_8h.html  DiskInfoTools_8h__dep__incl.map  DiskInfoTools_8h__dep__incl.md5  DiskInfoTools_8h__incl.md5  DiskInfoTools_8h_source.html  Dockerfile  Doxyfile  EdgeController_8hpp.html  EdgeController_8hpp__dep__incl.map  EdgeController_8hpp__dep__incl.md5  EdgeController_8hpp__incl.map  EdgeController_8hpp__incl.md5  EdgeController_8hpp_source.html  (+940 more)
cmake/: setup_oatpp.cmake
config/: config.ini  config.json  config.yaml
document/: EdgeX-Manager.md  HealthSnapshot健康快照模块.md  SoftHealthy工具技术方案.md  SystemHealthy工具技术方案.md
html/: ArgumentParser_8cpp__incl.md5  ArgumentParser_8h__incl.md5  DeviceOnlineMonitor_8cpp.html  DeviceOnlineMonitor_8cpp__incl.map  DeviceOnlineMonitor_8cpp__incl.md5  DeviceOnlineMonitor_8h.html  DeviceOnlineMonitor_8h__dep__incl.map  MyConfig_8h_source.html  MyLog_8h__dep__incl.map  MyLog_8h_source.html  MySystemHealthyManager_8h.html  MySystemHealthyManager_8h__dep__incl.map  MySystemHealthyManager_8h_source.html  ResourceUsageAnalyzer_8cpp.html  SimpleTcpClient_8cpp__incl.md5  SoftHealthMonitorConfig_8cpp__incl.map  SoftHealthMonitorConfig_8h__dep__incl.md5  SoftHealthMonitorConfig_8h__incl.md5  SoftHealthMonitorManager_8h.html  SoftHealthSnapshot_8cpp__incl.map  SoftHealthSnapshot_8h.html  SoftHealthSnapshot_8h__incl.map  SystemHealthyManager_8cpp__incl.md5  SystemHealthyManager_8h.html  SystemHealthyManager_8h__incl.map  SystemHealthyManager_8h__incl.md5  ThreadSafeBuffer_8h__dep__incl.md5  annotated.html  classArgumentParser.html  classArgumentParser_a52ce39cf5bee3972451b42a670ca3aa3_icgraph.md5  classArgumentParser_ae1196c0e42faa519ffc00f87c736bf3d_icgraph.map  classDeviceOnlineMonitor_a1eceab28885f971892b9d4fc76e0e542_icgraph.map  classDeviceOnlineMonitor_a70a4677f113e64393ea51d131e5b4391_cgraph.map  classHealthSnapshot__coll__graph.md5  classHealthSnapshot_a72265d535f959df02f73b10c0c67d2d6_icgraph.md5  classHealthSnapshot_ad0731b3e89fe4ac255af6999d4a55ddd_icgraph.map  classMyConfig.html  classMySystemHealthy_1_1DiskInfoTools_a6fb2528e70d3f4c2407e9f3f808ffd67_icgraph.md5  classMySystemHealthy_1_1MemInfoTools.html  classMySystemHealthy_1_1MemInfoTools_a7d1efa86655aef36739a8e6c9976a16c_icgraph.map  (+104 more)
scripts/: build_container.sh  build_dev_docker_image.sh  clear_build_dir.sh  gen_coverage_report.sh  install.sh  start_server_for_code_dwsign_docment.sh  start_server_for_covorage_report.sh  uninstall.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  (+59 more)
src/: CMakeLists.txt  example.cpp  main.cpp
src/proto/: SystemHealthy.proto  test.proto
src/protobuf/: CMakeLists.txt
src/tools/example/: example.h
src/tools/free_func/: FreeFunc.cpp  FreeFunc.h
src/tools/init_tools/: InitTools.cpp  InitTools.h
src/tools/monitor/device_online_monitor/: DeviceOnlineMonitor.cpp  DeviceOnlineMonitor.h
src/tools/ping_tools/: PingByCPR.cpp  PingByCPR.h
src/tools/pipeline/: Pipeline.cpp  Pipeline.h
src/tools/service_guard/: ServiceGuard.cpp  ServiceGuard.h
src/tools/simple_tcp_client/: SimpleTcpClient.cpp  SimpleTcpClient.h
src/tools/system_healthy/: CPUInfoTools.cpp  CPUInfoTools.h  DiskInfoTools.cpp  DiskInfoTools.h  GPUInfoTools.cpp  GPUInfoTools.h  MemInfoTools.cpp  MemInfoTools.h  NetInfoTools.cpp  NetInfoTools.h  ProcessInfoTools.cpp  ProcessInfoTools.h  SystemHealthyManager.cpp  SystemHealthyManager.h  system_healthy.cpp  system_healthy.h
src/tools/thread_safe_buffer/: ThreadSafeBuffer.cpp  ThreadSafeBuffer.h
src/tools/thread_safe_queue/: thread_safe_queue.h
src/util/my_ai_interface/: CMakeLists.txt
src/util/my_api/: CMakeLists.txt  EdgeController.hpp  MyAPI.cpp  MyAPI.h
src/util/my_arg_parser/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt
src/util/my_cache/: CMakeLists.txt
src/util/my_comm/: CMakeLists.txt
src/util/my_config/: CMakeLists.txt  MyConfig.cpp  MyConfig.h  MyINIConfig.cpp  MyINIConfig.h  MyJSONConfig.cpp  MyJSONConfig.h  MyYAMLConfig.cpp  MyYAMLConfig.h
src/util/my_control/: CMakeLists.txt
src/util/my_data/: CMakeLists.txt
src/util/my_db/: CMakeLists.txt
src/util/my_edge/: CMakeLists.txt  EdgeDevice.cpp  EdgeDevice.h  MyEdgeManager.cpp  MyEdgeManager.h
src/util/my_heartbeat/: CMakeLists.txt  MyHeartbeatManager.cpp  MyHeartbeatManager.h
src/util/my_log/: CMakeLists.txt  MyLog.cpp  MyLog.h
src/util/my_network/: CMakeLists.txt
src/util/my_soft_healthy/: CMakeLists.txt  SoftHealthMonitorConfig.cpp  SoftHealthMonitorConfig.h  SoftHealthMonitorManager.cpp  SoftHealthMonitorManager.h  SoftHealthSnapshot.cpp  SoftHealthSnapshot.h
src/util/my_system_healthy/: CMakeLists.txt  CPUInfoTools.cpp  CPUInfoTools.h  DiskInfoTools.cpp  DiskInfoTools.h  GPUInfoTools.cpp  GPUInfoTools.h  MemInfoTools.cpp  MemInfoTools.h  MySystemHealthyManager.cpp  MySystemHealthyManager.h  NetInfoTools.cpp  NetInfoTools.h  ProcessInfoTools.cpp  ProcessInfoTools.h
(+38 files in other folders)
